@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-27T01:10:26Z",
+  "timestamp" : "2022-07-27T08:14:52Z",
   "count_outdated" : 419,
   "uniques_outdated" : 226,
   "count" : 441,
-  "uniques" : 237,
+  "uniques" : 238,
   "clones" : [
     {
       "timestamp": "2022-07-13T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -72,6 +72,13 @@
       "timestamp": "2022-07-26T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
